# ray-tracer

./: .gitignore  Cargo.toml  README.md  todo.md
.github/workflows/: ci.yml
src/: camera.rs  canvas.rs  color.rs  demo.rs  epsilon.rs  intersection.rs  light.rs  main.rs  material.rs  matrix.rs  pattern.rs  plane.rs  projectile.rs  ray.rs  shape.rs  sphere.rs  transformation.rs  tuple.rs  world.rs
